--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -61,11 +61,11 @@ my_lib(packages)
 
 Over the last century, human activities have fundamentally changed the physico-chemical composition of the ocean, substantially warming the waters, decreasing the pH and reducing oxygen concentration [@IPCC:2019tn]. Throughout the ocean, marine species are distributed according to preferences in given environmental parameters (e.g., salinity, temperature, oxygen) [@Hutchinson:1957nt; @Nelson:2016kk]. As a result of climate change, many marine species have changed their distribution towards higher latitude, deeper water or following local environmental gradients [@Poloczanska:2016kk]. Biogeography of marine species is projected to continue to shift as ocean conditions continue to change in the 21st century under climate change [@Cheung:2010dt]. Climate change is expected to impact fisheries production, compromising our capacity to reach international sustainability goals such as Sustainable Development Goal 14 - life below water [@UnitedNations2018; @Barange:2014kr; @Singh:2017ds]. The projected risks of impacts can be reduced through improving the effectiveness of current fisheries management [@Gaines:2018sg; @Cheung:2018dh], including managing fisheries on species that cross international borders, i.e., shared stocks [@Gaines:2018sg; @Pinsky:2018cb].
 
-The concept of shared stocks were developed following the ratification of  the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by States [@UnitedNations:1986tl]. As defined by the Food and Agriculture Organization, shared stocks can be classified into three non-exclusive categories: (*i*) transboundary, those that cross neighboring EEZs; (*ii*) straddling, that, in addition to neighboring EEZs, also visit the adjacent high seas; and (*iii*) highly migratory, mainly tunas and bill-fishes that cover vast oceanic regions [@Munro:2004th]. While countries are responsible for the management of stocks within their EEZs, under UNCLOS, States are encouraged to cooperate when stocks are shared [Article 63, @UnitedNations:1986tl]. A recent study estimates that, globally, there are 633 transboundary fish species, yielding an average 48.5 million tonnes of catch and USD 78 billion in fishing revenue, per year, between 2005 and 2010 [@PalaciosAbrantes:2020tv]. 
+The concept of shared stocks was developed following the ratification of  the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by States [@UnitedNations:1986tl]. As defined by the Food and Agriculture Organization (FAO), shared stocks can be classified into three non-exclusive categories: (*i*) transboundary, those that cross neighboring EEZs; (*ii*) straddling, that, in addition to neighboring EEZs, also visit the adjacent high seas; and (*iii*) highly migratory, mainly tunas and bill-fishes that cover vast oceanic regions [@Munro:2004th]. While countries are responsible for the management of stocks within their EEZs, under UNCLOS, States are encouraged to cooperate when stocks are shared [Article 63, @UnitedNations:1986tl]. A recent study estimates that, globally, there are 633 transboundary fish species, yielding an average 48.5 million tonnes of catch and USD 78 billion in fishing revenue, per year, between 2005 and 2010 [@PalaciosAbrantes:2020tv]. 
 
 The effectiveness of managing fisheries targeting shared stocks is challenged by the shifts in marine species distribution under climate change [@Pinsky:2018cb; @Pinsky:wq]. In many cases, catch or fishing effort quota on shared stocks are based on historical records, [@Baudron:2020dj] and do not necessarily consider the biogeography of the species [@FredstonHermann:2018kp], nor the effects of climate change in the fish stocks and fisheries [@PalaciosAbrantes:2020tv]. Misalignment between fisheries resources allocation and species’ distributional shifts have previously resulted in unsustainable harvest and international disputes [@Miller:2013iv; @Song:2017va; @Spijkers:2017ij], patterns that are expected to be exacerbated by worsening climate change [@Pinsky:2018cb]. With future shifts in species distributions under climate change, the challenges posed on shared stocks fisheries management will continue to increase in the $21^{st}$ century. Thus, there is a need to understand the time when climate change will affect the sharing distribution of these species as well as the intensity in order to prepare ocean governance to species on the move [@Pinsky:2018cb; @PalaciosAbrantes:2020tv; @Link:2010ei]. 
 
-We propose that adapting the concepts of "Time of Emergence" (ToE) and “Thread Point” (TP) can help address some of the management challenges imposed by shifting species. Roughly, ToE is defined as the moment in time when an anthropogenic change signal (e.g., future trend) rises above the background noise of natural variability (e.g., historical variation) [@IPCC:2019tn]. This concept has been applied to investigate the emergence of multiple oceanic physical and biogeochemical variables [@Rodgers:2015jqq; @Keller:2014jv; @Frolicher:2016dg; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev]. The premise behind ToE is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background of natural climate variability [@Hawkins:2012hc]. The concept of thread point (TP) comes from game theory and is defined as the minimum payoff a player is willing to receive to cooperate in a game theoretic model [@Nash:1953vr]. Game theory has been widely used to investigate and manage shared stocks [@Sumaila:2013hv]. Specifically, Sumaila et al., *in press* applied this concept to understand the impacts of climate change to the economics of shared species between Canada and the United States. 
+We propose that adapting the concepts of "Time of Emergence" (ToE) and “Thread Point” (TP) can help address some of the management challenges imposed by shifting species. Roughly, ToE is defined as the moment in time when an anthropogenic change signal (e.g., future trend) rises above the background noise of natural variability (e.g., historical variation) [@IPCC:2019tn]. This concept has been applied to investigate the emergence of multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev]. The premise behind ToE is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background of natural climate variability [@Hawkins:2012hc]. The concept of thread point (TP) comes from game theory and is defined as the minimum payoff a player is willing to receive to cooperate in a game theoretic model [@Nash:1953vr]. Game theory has been widely used to investigate and manage shared stocks [@Sumaila:2013hv]. Specifically, Sumaila et al., *in press* applied this concept to understand the impacts of climate change to the economics of shared species between Canada and the United States. 
 
 Here, we estimate the ToE and TP of the share distribution of transboundary stocks worldwide. We rely on a species distribution model driven by output from an Earth system model with ten ensemble members to project the distribution of the 663 selected shared species [@PalaciosAbrantes:2020tv] by 280 EEZs of 198 coastal countries under a high greenhouse gas emission scenario RCP8.5 (see Methods). We treated each species in an EEZ as a single stock due to the lack of more spatially resolved data [@PalaciosAbrantes:2020tv] and only considered shared stocks between neighboring EEZs (i.e., we did not include the high seas). Our results suggest that many shared stocks have already ‘emerged’ and overpassed their share TP in most neighboring EEZs posing a threat to the sustainability of shared stocks and the resilience of international treaties. 
 
@@ -73,7 +73,7 @@ Here, we estimate the ToE and TP of the share distribution of transboundary stoc
 
 ### Databases and species selection
 
-This analysis includes 633 marine exploited transboundary species previously identified to account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. Each time a species was shared by a pair of neighbouring EEZs it considered a transboundary stock [@Teh:2015gd; @PalaciosAbrantes:2020tv] for a total of 9,132 transboundary stocks. We defined the boundaries of the world’s EEZs using the *Sea Around Us* spatial division (updated 1 July 2015, available from http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (e.g., Mexico’s EEZ is divided into Mexico Pacific and Mexico Atlantic; Figure \@ref(fig:FigureS1)) including island territories. We determined the intersections between polygons using the *R*-statistical software package *sf* [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by the geopolitical regions and natural biomes according to the United Nations and by natural biome [@Reygondeau:2019uh]. Habitat preference of each species was determined based on information available from FishBase (http://www.fishbase.org). For each species and EEZ, we used the *Sea Around Us* data to estimate catch and fishing revenue from fishing activities within global EEZs. We report both average catch and revenue for the last decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc]. The monthly average US Consumer Price Index (CPI) according to the U.S. Bureau of Labor Statistic (https://www.bls.gov/cpi/) was used to standardize all monetary values to 2019 real USD.
+This analysis includes 633 marine exploited transboundary species previously identified to account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. Each time a species was shared by a pair of neighbouring EEZs it was considered a transboundary stock [@Teh:2015gd; @PalaciosAbrantes:2020tv] for a total of 9,132 transboundary stocks. We defined the boundaries of the world’s EEZs using the *Sea Around Us* spatial division (updated 1 July 2015, available from http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (e.g., Mexico’s EEZ is divided into Mexico Pacific and Mexico Atlantic; Figure \@ref(fig:FigureS1)) including island territories. We determined the intersections between polygons using the *R*-statistical software package *sf* [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by the geopolitical regions according to the United Nations and by natural biome [@Reygondeau:2019uh]. The habitat preference of each species was determined based on information available from FishBase (http://www.fishbase.org). For each species and EEZ, we used the *Sea Around Us* data to estimate catch and fishing revenue from fishing activities within global EEZs. We report both average catch and revenue for the last decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc]. The monthly average US Consumer Price Index (CPI) according to the U.S. Bureau of Labor Statistic (https://www.bls.gov/cpi/) was used to standardize all monetary values to 2019 real USD.
 
 
 ### Projecting species distributions under climate change
@@ -81,7 +81,7 @@ This analysis includes 633 marine exploited transboundary species previously ide
 We projected the distribution of marine species using a dynamic bioclimatic envelope model (hereafter called DBEM) [@Cheung:2010dt; @Cheung:2016jd]. The DBEM  represents species’ physiology, habitat suitability, depth and latitudinal ranges, and spatial population dynamics as well as preferences to sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. For pelagic species, the model uses environmental variables at the surface (e.g., sea surface temperature) whereas demersal species distribution are driven by ocean bottom variables (e.g., bottom temperature). This way, the model estimates species abundance and maximum catch potential (a proxy of maximum sustainable yield) over a $0.5^{\circ}$ x $0.5^{\circ}$ grid of the world (see Cheung *et al.* [-@Cheung:2010dt; -@Cheung:2016jd] for model details). Recent work has demonstrated that, at the global scale, DBEM is able to reproduce catch changes similar in magnitude to those detected in observed catch time series in the
 world’s EEZs (Cheung et al. in revision).
 
-We forced the DBEM with environmental data from a ten ensemble member simulation of the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project the distributions of the 633 species from 1951 to 2100 [@Dunne:2012bo; @Dunne:2013db; @Rodgers:2015jqq]. The GFDL-ESM2M is run under historical forcing until 2005 and follows the ‘high’ climate change emissions scenario, the Representative Concentration Pathway 8.5 (RCP 8.5) over the 2006-2100 period [Riahi:2011dk]. In GFDL-ESM2M, atmospheric surface temperature is projected to increase by $3.2^{\circ}C$ by 2081-2100, relative to preindustrial levels. Because the main approach of this paper relies on understanding the spatial and temporal variation of a species’ distribution, we have to understand both the historical as well as the future climate-driven distribution variability, to infer differences between time frames. We do this by following an ensemble member approach where each member constitutes a different realization of the Earth system variability condition [@Rodgers:2015jqq; @Frolicher:2009ge]. Thus, for our experiment, each of the ten GFDL-ESM2M-ensembles were started from infinitesimally small differences in Earth system initial conditions resulting in a unique atmosphere and ocean state at each point in time. This approach allows us to estimate the natural internal variability (e.g., background noise) and isolate the forced climate signal of a stock’s distribution by averaging the secular trend over all ten ensemble members.
+We forced the DBEM with environmental data from a ten ensemble member simulation of the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project the distributions of the 633 species from 1951 to 2100 [@Dunne:2012bo; @Dunne:2013db; @Rodgers:2015jq]. The GFDL-ESM2M is run under historical forcing until 2005 and follows the ‘high’ climate change emissions scenario, the Representative Concentration Pathway 8.5 (RCP 8.5) over the 2006-2100 period [@Riahi:2011dk]. In GFDL-ESM2M, atmospheric surface temperature is projected to increase by $3.2^{\circ}C$ by 2081-2100, relative to preindustrial levels. Because the main approach of this paper relies on understanding the spatial and temporal variation of a species’ distribution, we have to understand both the historical as well as the future climate-driven distribution variability, to infer differences between time frames. We do this by following an ensemble member approach where each member constitutes a different realization of the Earth system variability condition [@Rodgers:2015jq; @Frolicher:2009ge]. Thus, for our experiment, each of the ten GFDL-ESM2M-ensembles were started from infinitesimally small differences in Earth system initial conditions resulting in a unique atmosphere and ocean state at each point in time. This approach allows us to estimate the natural internal variability (e.g., background noise) and isolate the forced climate signal of a stock’s distribution by averaging the secular trend over all ten ensemble members.
 
 ### Calculating an index of transboundary range shift
 
@@ -121,11 +121,11 @@ TI =(\frac{D_{A,t}}{sd(D_{A,th})} - \frac{D_{B,t}}{sd(D_{B,th)}})^2
 \end{equation}
 
 
-where $D_A$ and $D_B$ represent the distance between the distribution centroids of a species and the centroid of the pair of neighbouring EEZs (A and B) sharing the species for each time step from 2006 to 2100 (*t*); and *sd* is the standard deviation of the historical (*th*, 1951 - 2005) centroid distribution for $D_A$ and $D_B$. Thus, a higher TI means that a shared species becomes more or less abundant relative to its neighbouring EEZs that is beyond what the fisheries experienced historically. From the perspective of a state’s fisheries, higher TI indicates an increase in the challenges to the effective management and sustainability of the shared species’ fisheries. In contrast, a smaller TI suggests that the sharing of the species between neighbouring EEZs is becoming relatively more stable; a condition that favors effective management and sustainability of the shared species’ fisheries. The index was smoothed to a 10 year average to reduce interanual variability. 
+where $D_A$ and $D_B$ represent the distance between the distribution centroids of a species and the centroid of the pair of neighbouring EEZs (A and B) sharing the species for each time step from 2006 to 2100 (*t*); and *sd* is the standard deviation of the historical (*th*, 1951 - 2005) centroid distribution for $D_A$ and $D_B$. Thus, a higher TI means that a shared species becomes more or less abundant relative to its neighbouring EEZs that is beyond what the fisheries experienced historically. From the perspective of a state’s fisheries, higher TI indicates an increase in the challenges to the effective management and sustainability of the shared species’ fisheries. In contrast, a smaller TI suggests that the sharing of the species between neighbouring EEZs is becoming relatively more stable; a condition that favors effective management and sustainability of the shared species’ fisheries. The index was smoothed to a 10 year average to reduce interannual variability. 
 
 #### Calculating the Time-of-Emergence of the transboundary index
 
-Knowing the point in time (e.g., year) at which the distribution of a shared stock will diverge from its natural internal variability is important in informing the lead-time to which climate adaptation in transboundary fisheries management needs to be implemented [@Link:2010ei]. Thus, we define ToE as the time when the shared stock between neighbouring EEZs will exceed the historical natural internal variability as follows:
+Knowing the point in time (e.g., year) at which the distribution of a shared stock will diverge from its natural internal variability is important in informing the lead-time to which climate adaptation in transboundary fisheries management needs to be implemented [@Link:2010ei]. Thus, we define ToE as the time when the stock shared between neighbouring EEZs will exceed the historical natural internal variability as follows:
 
 <!-- $EmergenceTIndex = \frac{\mu_{TI[t]}}{SD_{TI_{th}}}$ -->
 <!-- $ToE = t when Emergence index[t] > 1$ -->
@@ -303,9 +303,9 @@ In this paper we endeavor to look at the timing and intensity of changes in the 
 
 #### High present-day climate risk of on transboundary fisheries management
 
-Our results suggest that in most EEZs, more than half of transboundary species emerged in the early 2000s (Figure \@ref{fig:Figure1}). This is in alignment with previous research pointing to changes in marine catch  composition since the 1970s as evidence of climate change [@Cheung:2013gk, @Poloczanska:2016kk]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range, reaching Washington state waters where a new fishery rapidly developed [@Pinsky:2014by; @Zeidberg:2007gs]. In the North East Atlantic, the emergence of Atlantic mackerel (*Scomber scombrus*) in Icelandic waters in 2010, led to years of unsettled international conflict between multiple fishing nations [@Spijkers:2017ij]. The large number of transboundary species emerging since early 2000s identified in this study can be partially attributed to the time of emergence of several environmental variables (e.g., temperature, oxygen) that influence the distribution of marine species [@Rodgers:2015jqq; @Keller:2014jv; @Frolicher:2016dg; @Mahlstein:2011fy]. It has been estimated that since the early 2000s, SST and oxygen ($O_2$) have emerged in 79% and 23% of the global ocean, respectively, and by 2080 SST will have emerged in 90% of the global ocean while $O_2$ will have doubled under a high greenhouse gas emission scenario [@Rodgers:2015jq].
+Our results suggest that in most EEZs, more than half of transboundary species emerged in the early 2000s (Figure \@ref{fig:Figure1}). This is in alignment with previous research pointing to changes in marine catch  composition since the 1970s as evidence of climate change [@Cheung:2013gk, @Poloczanska:2016kk]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range, reaching Washington state waters where a new fishery rapidly developed [@Pinsky:2014by; @Zeidberg:2007gs]. In the North East Atlantic, the emergence of Atlantic mackerel (*Scomber scombrus*) in Icelandic waters in 2010, led to years of unsettled international conflict between multiple fishing nations [@Spijkers:2017ij]. The large number of transboundary species emerging since early 2000s identified in this study can be partially attributed to the time of emergence of several environmental variables (e.g., temperature, oxygen) that influence the distribution of marine species [@Rodgers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Mahlstein:2011fy]. It has been estimated that since the early 2000s, SST and oxygen ($O_2$) have emerged in 79% and 23% of the global ocean, respectively, and by 2080 SST will have emerged in 90% of the global ocean while $O_2$ will have doubled under a high greenhouse gas emission scenario [@Rodgers:2015jq].
 
-Regional differences in ToE are likely the result of environmental factors, species vulnerability, and the characteristics of political boundaries. For example, our findings underscore previous findings suggesting that tropical species are already on the move. The tropics are among the most species-rich biome [@Reygondeau:2019uhno] and have potentially experienced some of the greatest levels of warming relative to natural internal variability [@IPCC:2019tn; @Roemmich:2015id]. In the tropics, marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2014bz]. Consequently, as a result of climate change, species have to move towards deeper or sub-tropical waters [@Poloczanska:2016kk] although recent studies suggest that in some regions species are shifting towards the equator and to shallow waters [@Clarke:2020ep]. The premise of a shift already happening is supported by observational evidence of tropical species appearing in sub-tropical biomes [@Fogarty:2017eo] and catch-data analysis showing a reduction in sub-tropical species catches in tropical waters between 1970 and 2006 [@Cheung:2013gk]. In addition to species natural traits and the environmental pressure from climate change, the tropics comprise areas with relatively small EEZs and many borders that match peaks of emerging stocks. Specifically, it seems like South East Asia, the Caribbean, and the Mediterranean harbour substantial increases in emerging stocks (Figure \@ref{fig:Figure2}).
+Regional differences in ToE are likely the result of environmental factors, species vulnerability, and the characteristics of political boundaries. For example, our findings underscore previous findings suggesting that tropical species are already on the move. The tropics are among the most species-rich biome [@Reygondeau:2019uh] and have potentially experienced some of the greatest levels of warming relative to natural internal variability [@IPCC:2019tn; @Roemmich:2015id]. In the tropics, marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2014bz]. Consequently, as a result of climate change, species have to move towards deeper or sub-tropical waters [@Poloczanska:2016kk] although recent studies suggest that in some regions species are shifting towards the equator and to shallow waters [@Clarke:2020ep]. The premise of a shift already happening is supported by observational evidence of tropical species appearing in sub-tropical biomes [@Fogarty:2017eo] and catch-data analysis showing a reduction in sub-tropical species catches in tropical waters between 1970 and 2006 [@Cheung:2013gk]. In addition to species natural traits and the environmental pressure from climate change, the tropics comprise areas with relatively small EEZs and many borders that match peaks of emerging stocks. Specifically, it seems like South East Asia, the Caribbean, and the Mediterranean harbour substantial increases in emerging stocks (Figure \@ref{fig:Figure2}).
 
 ### Hotspot of climate risk on transboundary fisheries management
 
