--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -28,14 +28,14 @@ my_lib(packages)
 ```
 
 
-```{r FigureS1, eval = T,  echo = F, fig.width=9, fig.height=4, fig.cap =  "World Exclusive Economic Zones used in this study as devided by the Sea Around Us and their centroids (points)."}
+```{r toeFigureS1, eval = T,  echo = F, fig.width=9, fig.height=4, fig.cap =  "World Exclusive Economic Zones used in this study as devided by the Sea Around Us and their centroids (points)."}
 
 img <- readPNG("../Figures/Supp1.png")
 grid.raster(img)
 
 ```
 
-```{r FigureS2, eval = T,  echo = F, fig.width=9, fig.height=4, fig.cap = "Graphical representation of the transboundary index (TI) to determine the time of emergence of transboundary stocks. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighbouring Exclusive Economic Zones sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overpasses historical values (Bottom panel)."}
+```{r toeFigureS2, eval = T,  echo = F, fig.width=9, fig.height=4, fig.cap = "Graphical representation of the transboundary index (TI) to determine the time of emergence of transboundary stocks. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighbouring Exclusive Economic Zones sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overpasses historical values (Bottom panel)."}
 
 img <- readPNG("../Figures/Supp2.png")
 grid.raster(img)
@@ -43,7 +43,7 @@ grid.raster(img)
 ```
 
 
-```{r FigureS3, eval = T,  echo = F, fig.width=4, fig.height=4, fig.cap =  "Average Time  of Emergence and standar dviation for a 64% confidence treshold  (purple) and a 98% confidence teshold (yellow)"}
+```{r toeFigureS3, eval = T,  echo = F, fig.width=4, fig.height=4, fig.cap =  "Average Time  of Emergence and standar dviation for a 64% confidence treshold  (purple) and a 98% confidence teshold (yellow)"}
 
 img <- readPNG("../Figures/Supp3.png")
 grid.raster(img)
@@ -52,7 +52,7 @@ grid.raster(img)
 
 
 
-```{r FigureS4, eval = T,  echo = F, fig.width=4, fig.height=4, fig.cap =  "Distribution of Stock Share Ratio percentage change by the early (2021-2040) and middle (2040-2060) 21st centurury relative to today (1951-2005)"}
+```{r toeFigureS4, eval = T,  echo = F, fig.width=4, fig.height=4, fig.cap =  "Distribution of Stock Share Ratio percentage change by the early (2021-2040) and middle (2040-2060) 21st centurury relative to today (1951-2005)"}
 
 img <- readPNG("../Figures/Supp4.png")
 grid.raster(img)
@@ -63,7 +63,7 @@ grid.raster(img)
 
 
 
-```{r FigureS5, eval = T,  echo = F, fig.width=9, fig.height=12, fig.cap =  "Changes in Stock Share Ration by 2050 (2041-2060) relative to 1951-2005. Lines represent the average gain of transboundary stock share ratio with srrows going from the losing EEZ (point) to the winner (arrowhead). Polygons represent the percentage of initial species that will see a shift. Panel B zooms in to specific areas shown in grey boxes of A."}
+```{r toeFigureS5, eval = T,  echo = F, fig.width=9, fig.height=12, fig.cap =  "Changes in Stock Share Ration by 2050 (2041-2060) relative to 1951-2005. Lines represent the average gain of transboundary stock share ratio with srrows going from the losing EEZ (point) to the winner (arrowhead). Polygons represent the percentage of initial species that will see a shift. Panel B zooms in to specific areas shown in grey boxes of A."}
 
 img <- readPNG("../Figures/Supp5.png")
 grid.raster(img)
@@ -72,7 +72,7 @@ grid.raster(img)
 
 
 
-```{r TableS1, eval = T, echo = F}
+```{r toeTableS1, eval = T, echo = F}
 
 read.csv("~/GitHub/TransEmergence/Tables/kw_regional.csv") %>% 
   select(-statistic,
@@ -91,7 +91,7 @@ read.csv("~/GitHub/TransEmergence/Tables/kw_regional.csv") %>%
 ```
 
 
-```{r TableS2, eval = T, echo = F}
+```{r toeTableS2, eval = T, echo = F}
 
 read.csv("~/GitHub/TransEmergence/Tables/kw_habitat.csv") %>% 
   select(-statistic,
